--- a/project/index.html
+++ b/project/index.html
@@ -12,7 +12,7 @@
       <header class="header">
         <div class="container">
           <div class="header__inner">
-            <a class="logo" href="#">
+            <a class="logo" href="index.html">
               <img src="img\Logo.png" alt="logo" />
             </a>
             <nav class="menu">
