--- a/project/restaurants.html
+++ b/project/restaurants.html
@@ -13,7 +13,7 @@
       <header class="header">
         <div class="container">
           <div class="header__inner">
-            <a class="logo" href="#">
+            <a class="logo" href="index.html">
               <img src="img\Logo.png" alt="logo" />
             </a>
             <nav class="menu">
@@ -22,7 +22,7 @@
                   <a class="menu__list-link" href="index.html">Обзор</a>
                 </li>
                 <li class="menu__list-link">
-                  <a class="menu__list-link" href="">Рестораны</a>
+                  <a class="menu__list-link" href="restaurants.html">Рестораны</a>
                 </li>
                 <li class="menu__list-link">
                   <a class="menu__list-link" href="">Мои рестораны</a>
@@ -33,7 +33,82 @@
           </div>
         </div>
       </header>
-      <main class="main"></main>
+      <main class="main">
+        <section class="search-line">
+          <div class="container">
+            <form class="search-form" method="get">
+              <input
+                class="search-form__input"
+                type="text"
+                placeholder="Введите название ресторана"
+              />
+              <input class="search-form__button" type="image" src="img/icons/findIcon.svg" />
+            </form>
+          </div>
+        </section>
+        <section class="restaurants">
+          <div class="container">
+            <div class="restaurants__inner">
+              <ul class="restaurants-list">
+                <li class="restaurants-list__item">
+                  <a href="restaurant-info.html">
+                    <img class="restaurant-avatar" src="img/restaurants/ava1.jpg" alt="ava" />
+                  </a>
+                  <h5>Name</h5>
+                  <p>8.5</p>
+                </li>
+                <li class="restaurants-list__item">
+                  <a href="restaurant-info.html">
+                    <img class="restaurant-avatar" src="img/restaurants/ava2.jpg" alt="ava" />
+                  </a>
+                  <h5>Name</h5>
+                  <p>8.5</p>
+                </li>
+                <li class="restaurants-list__item">
+                  <a href="restaurant-info.html">
+                    <img class="restaurant-avatar" src="img/restaurants/ava3.jpg" alt="ava" />
+                  </a>
+                  <h5>Name</h5>
+                  <p>8.5</p>
+                </li>
+                <li class="restaurants-list__item">
+                  <a href="restaurant-info.html">
+                    <img class="restaurant-avatar" src="img/restaurants/ava1.jpg" alt="ava" />
+                  </a>
+                  <h5>Name</h5>
+                  <p>8.5</p>
+                </li>
+                <li class="restaurants-list__item">
+                  <a href="restaurant-info.html">
+                    <img class="restaurant-avatar" src="img/restaurants/ava2.jpg" alt="ava" />
+                  </a>
+                  <h5>Name</h5>
+                  <p>8.5</p>
+                </li>
+                <li class="restaurants-list__item">
+                  <a href="restaurant-info.html">
+                    <img class="restaurant-avatar" src="img/restaurants/ava3.jpg" alt="ava" />
+                  </a>
+                  <h5>Name</h5>
+                  <p>8.5</p>
+                </li>
+                <li class="restaurants-list__item">
+                  <a href="restaurant-info.html">
+                    <img class="restaurant-avatar" src="img/restaurants/ava3.jpg" alt="ava" />
+                  </a>
+                  <h5>Name</h5>
+                  <p>8.5</p>
+                </li>
+              </ul>
+              <div class="filter">
+                <div class="filter__inner">
+                  <h2 class="sub-titile">Фильтры</h2>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </main>
       <footer class="footer">
         <div class="container">
           <div class="footer__inner">
