add another pages

--- a/project/restaurants.html
+++ b/project/restaurants.html
@@ -29,7 +29,7 @@
                 </li>
               </ul>
             </nav>
-            <button class="button header__btn">Личный кабинет</button>
+            <a class="button header__btn" href="personal.html">Личный кабинет</a>
           </div>
         </div>
       </header>
