--- a/project/restaurant-info.html
+++ b/project/restaurant-info.html
@@ -13,7 +13,7 @@
       <header class="header">
         <div class="container">
           <div class="header__inner">
-            <a class="logo" href="#">
+            <a class="logo" href="index.html">
               <img src="img\Logo.png" alt="logo" />
             </a>
             <nav class="menu">
@@ -29,7 +29,7 @@
                 </li>
               </ul>
             </nav>
-            <button class="button header__btn">Личный кабинет</button>
+            <a class="button header__btn" href="personal.html">Личный кабинет</a>
           </div>
         </div>
       </header>
@@ -51,16 +51,85 @@
                   </div>
                 </div>
               </div>
-              <div class="booking">
-                <div class="booking__inner">
+              <div class="booking-block">
+                <div class="booking-block__inner">
                   <p>5 свободных столов</p>
-                  <a class="button" href="#">Забронировать</a>
+                  <a class="button" href="book-table.html">Забронировать</a>
                 </div>
               </div>
             </div>
           </div>
         </section>
-        <section class="reviews"></section>
+        <section class="reviews">
+          <div class="container">
+            <div class="reviews__inner">
+              <h1 class="title">Отзывы</h1>
+              <form class="create-review">
+                <div class="create-review__inner">
+                  <select class="create-review__select" name="" id="">
+                    <option value="">1</option>
+                    <option value="">2</option>
+                    <option value="">3</option>
+                    <option value="">4</option>
+                    <option value="" selected>5</option>
+                  </select>
+                  <textarea class="create-review__textarea"></textarea>
+                  <input class="button" type="submit" value="Отправить" />
+                </div>
+              </form>
+              <ul class="reviews-list">
+                <li class="reviews-list__item">
+                  <div class="reviews-list__item-info">
+                    <div class="reviews-list__item-main-data">
+                      <h5>Имя пользователя</h5>
+                      <p class="reviews-list__item-score">8.1</p>
+                    </div>
+                    <p class="reviews-list__item-date">10.17.2021</p>
+                  </div>
+                  <p class="reviews-list__item-text">
+                    Не первый раз посещаю, нравится здесь и кухня, и атмосфера, и живая музыка
+                  </p>
+                </li>
+                <li class="reviews-list__item">
+                  <div class="reviews-list__item-info">
+                    <div class="reviews-list__item-main-data">
+                      <h5>Имя пользователя</h5>
+                      <p class="reviews-list__item-score">8.1</p>
+                    </div>
+                    <p class="reviews-list__item-date">10.17.2021</p>
+                  </div>
+                  <p class="reviews-list__item-text">
+                    Не первый раз посещаю, нравится здесь и кухня, и атмосфера, и живая музыка
+                  </p>
+                </li>
+                <li class="reviews-list__item">
+                  <div class="reviews-list__item-info">
+                    <div class="reviews-list__item-main-data">
+                      <h5>Имя пользователя</h5>
+                      <p class="reviews-list__item-score">8.1</p>
+                    </div>
+                    <p class="reviews-list__item-date">10.17.2021</p>
+                  </div>
+                  <p class="reviews-list__item-text">
+                    Не первый раз посещаю, нравится здесь и кухня, и атмосфера, и живая музыка
+                  </p>
+                </li>
+                <li class="reviews-list__item">
+                  <div class="reviews-list__item-info">
+                    <div class="reviews-list__item-main-data">
+                      <h5>Имя пользователя</h5>
+                      <p class="reviews-list__item-score">8.1</p>
+                    </div>
+                    <p class="reviews-list__item-date">10.17.2021</p>
+                  </div>
+                  <p class="reviews-list__item-text">
+                    Не первый раз посещаю, нравится здесь и кухня, и атмосфера, и живая музыка
+                  </p>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section>
       </main>
       <footer class="footer">
         <div class="container">
